Bug 1638243 reject promises for Resume AudioContextOperations that have not run by graph shutdown r=padenot

The promises are rejected before shutting down threads so that they don't need
to wait for nested event loops to exit.

Differential Revision: https://phabricator.services.mozilla.com/D76807